--- a/css/layout.css
+++ b/css/layout.css
@@ -36,9 +36,9 @@ body {
 }
 p {
   font-size: 20px;
-  font-weight: 450;
+  font-weight: 400;
   font-family: Hind, sans-serif;
-  color: #a6a7aa;
+  color: #808080;
   line-height: 1.4;
   margin-bottom: 15px;
 }
